--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -69,7 +69,9 @@ a{
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox.
- Thank you flexbox for everything that you do <3*/
+ Thank you flexbox for everything that you do <3. I realise, it is best practice to keep all style in one css file.
+ I separated for two reasons, I wanted to know that it was possible to separate. And for this early project I wanted
+ to keep my two page styles separate for my own sanity.*/
 body{
     width: 60%;
     margin: auto;
@@ -86,7 +88,6 @@ header nav{
 header nav a:hover{
     animation: grow infinite 1s linear;
     color: green;
-
 }
 
 @keyframes grow {
@@ -99,4 +100,60 @@ header nav a:hover{
     100%{
         transform: scale(1.0);
     }
+}
+
+/*main content*/
+.services h1{
+    font-size: 30px;
+}
+.services-header-img{
+    margin-bottom: 30px;
+}
+.services .brief{
+    margin-bottom: 30px;
+}
+
+.services .types div{
+    width: 46%;/*todo: make this smaller, like 40% and add margin/padding to space these apart*/
+    background-color: #f5f5f5;
+    margin: 2% 0;
+    padding: 2%;
+    border: 1px solid black;
+
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+}
+.services .types div > *{
+    margin-bottom: 5px;
+}
+.services .types div h2{
+    margin-bottom: 0;
+}
+.services .types button{
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+.services .types{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/*facts section*/
+
+.facts{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyright{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
 }
