--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -157,3 +157,29 @@ header nav a:hover{
     justify-content: center;
     margin-bottom: 10px;
 }
+
+/*mobile*/
+@media only screen and (max-width: 600px) {
+    
+    header nav{
+        /*I know that this is not the right solution, but until we get into javascript frameworks for actually changing the html, this
+        is what I am going with. :-]*/
+        display: none;
+    }
+    .services-header-img{
+        width: 100%;
+        height: auto;
+    }
+
+    .services .types div{
+        width: 100%;/*todo: make this smaller, like 40% and add margin/padding to space these apart*/
+        background-color: #f5f5f5;
+        margin: 2% 0;
+        padding: 2%;
+        border: 1px solid black;
+
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+    }
+}
